# rust-xp-ollama

./: .gitignore  Cargo.toml
_mock-data/: for-embeddings.txt
examples/: c01-simple.rs  c02-context.rs  c03-chat.rs  c04-embeddings.rs
src/: lib.rs
